Correct forms on mobile size screen

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ footer {
   line-height: 52px;
   color: #fff;
   text-align: center;
-  padding-top: 114px;
+  padding-top: 64px;
 }
 
 .container-form {
@@ -305,7 +305,7 @@ footer {
   line-height: 28px;
   text-align: center;
   margin-top: 12px;
-  margin-bottom: 2.5em;
+  margin-bottom: 1.2em;
 }
 
 .form-field {
